프론트테스트 2차

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -81,21 +81,21 @@
 					<div class="clear"></div>
 					<div>
 						<label>Email (Optional)</label>
-						<input type="text" placeholder="you@example.com" class="width100 pass" name="email">
+						<input type="text" placeholder="you@example.com" class="width100 unrequired" name="email" id="input-email">
 						<span class="error" id="email">Does not match email format.</span>
 					</div>
 					<div>
 						<label>Address</label>
-						<input type="text" placeholder="1234 Main St" class="width100 pass">
+						<input type="text" placeholder="1234 Main St" class="width100 unrequired">
 					</div>
 					<div>
 						<label>Address2 (Optional)</label>
-						<input type="text" placeholder="Apartment or suite" class="width100 pass">
+						<input type="text" placeholder="Apartment or suite" class="width100 unrequired">
 					</div>
 					<div>
 						<div class="float-left width40">
 							<label>Country</label>
-							<select class="width100 required" name="country">
+							<select class="width100 required">
 								<option>Choose...</option>
 								<option>Unites State</option>
 							</select>
@@ -126,9 +126,9 @@
 					<div>
 						<h3>Payment</h3>
 						<div>
-							<label name="radio1"><input type="radio" name="radio" checked="checked" id="radio1"><span class="pass"> Credit card</span> <br></label>
-							<label name="radio2"><input type="radio" name="radio" id="radio2"><span class="pass"> Debit card</span> <br> </label>
-							<label name="radiod3"><input type="radio" name="radio" id="radio3"><span class="pass"> PayPal</span> </label>
+							<label name="radio1"><input type="radio" name="radio" checked="checked" id="radio1"><span class="unrequired"> Credit card</span> <br></label>
+							<label name="radio2"><input type="radio" name="radio" id="radio2"><span class="unrequired"> Debit card</span> <br> </label>
+							<label name="radiod3"><input type="radio" name="radio" id="radio3"><span class="unrequired"> PayPal</span> </label>
 						</div>
 						<div class="clear"></div>
 						<div>
