--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -118,9 +118,9 @@
 					<div class="clear"></div>
 					<hr>
 					<div class="my-20">
-						<label name="check1"><input type="checkbox" id="check1" name="check"> Shipping address is the same as my billing address<br></label>
-						<label name="check2"><input type="checkbox" id="check2" name="check"> Save this information for next time</label>
-						<span class="error" id="check">please select at least one</span>
+						<label name="check1"><input type="checkbox" id="check1" name="check" class="required"> Shipping address is the same as my billing address<br></label>
+						<label name="check2"><input type="checkbox" id="check2" name="check" class="required"> Save this information for next time</label>
+						<span class="error necessary">please select at least one</span><span class="necessary"></span>
 					</div>
 					<hr>
 					<div>
